package com.blacklist.grpc;

import com.blacklist.config.GrpcConfig;
import com.blacklist.dto.BlacklistFullInfo;
import com.blacklist.util.BlacklistBitEncoder;
import com.blacklist.util.IdCardHashUtil;
import com.google.protobuf.ByteString;
import io.grpc.ManagedChannel;
import io.grpc.ManagedChannelBuilder;
import lombok.extern.slf4j.Slf4j;
import lombok.var;
import org.springframework.beans.factory.annotation.Autowired;
import org.springframework.stereotype.Component;
import psi.PSIServiceGrpc;
import psi.Psi;

import javax.annotation.PostConstruct;
import javax.annotation.PreDestroy;
import java.util.Base64;
import java.util.HashMap;
import java.util.List;
import java.util.Map;
import java.util.concurrent.TimeUnit;

@Slf4j
@Component
public class PSIGrpcClient {

    @Autowired
    private GrpcConfig grpcConfig;

    private ManagedChannel channel;
    private PSIServiceGrpc.PSIServiceBlockingStub blockingStub;

    @PostConstruct
    public void init() {
        log.info("åˆå§‹åŒ–gRPCå®¢æˆ·ç«¯ï¼Œè¿æ¥åˆ° {}:{}", grpcConfig.getAddress(), grpcConfig.getPort());

        channel = ManagedChannelBuilder
                .forAddress(grpcConfig.getAddress(), grpcConfig.getPort())
                .usePlaintext()
                .maxInboundMessageSize(100 * 1024 * 1024)  // 100MB
                .build();

        blockingStub = PSIServiceGrpc.newBlockingStub(channel);

        log.info("gRPCå®¢æˆ·ç«¯åˆå§‹åŒ–å®Œæˆ");
    }

    @PreDestroy
    public void shutdown() {
        try {
            if (channel != null && !channel.isShutdown()) {
                channel.shutdown().awaitTermination(5, TimeUnit.SECONDS);
                log.info("gRPCå®¢æˆ·ç«¯å·²å…³é—­");
            }
        } catch (InterruptedException e) {
            log.error("å…³é—­gRPCå®¢æˆ·ç«¯å¤±è´¥", e);
            Thread.currentThread().interrupt();
        }
    }

    /**
     * æ‰§è¡ŒPSIåŒ¹é…ï¼ˆä½¿ç”¨ä½ç¼–ç æ–¹æ¡ˆï¼‰
     */
    public String doMatch(String contextData, String payloadData, List<BlacklistFullInfo> blacklistData) {
        try {
            log.info("========================================");
            log.info("å¼€å§‹gRPCè°ƒç”¨");
            log.info("é»‘åå•æ•°æ®é‡: {}", blacklistData.size());

            // 1. è§£ç Base64æ•°æ®
            byte[] contextBytes = Base64.getDecoder().decode(contextData);
            byte[] payloadBytes = Base64.getDecoder().decode(payloadData);

            log.info("Contextå­—èŠ‚æ•°: {}", contextBytes.length);
            log.info("Payloadå­—èŠ‚æ•°: {}", payloadBytes.length);

            // 2. è½¬æ¢é»‘åå•æ•°æ®ä¸ºsrv_dataæ ¼å¼
            log.info("å¼€å§‹è½¬æ¢srv_data...");
            Map<Long, Psi.LabelsType> srvData = convertBlacklistToSrvData(blacklistData);

            log.info("srv_dataå¤§å°: {}", srvData.size());

            // ğŸ”¥ 3. éªŒè¯srv_dataå†…å®¹ï¼ˆå‘é€å‰æ£€æŸ¥ï¼‰
            log.info("========== å‘é€å‰éªŒè¯ ==========");
            int verifyCount = 0;
            for (Map.Entry<Long, Psi.LabelsType> entry : srvData.entrySet()) {
                if (verifyCount >= 3) break;

                Long key = entry.getKey();
                Psi.LabelsType labels = entry.getValue();

                log.info("srv_data[{}]:", verifyCount);
                log.info("  key(hash): {}", key);
                log.info("  labels.count: {}", labels.getLabelsCount());

                if (labels.getLabelsCount() > 0) {
                    long firstLabel = labels.getLabels(0);
                    log.info("  labels[0]: {}", firstLabel);
                    log.info("  labels[0] (hex): 0x{}", Long.toHexString(firstLabel));
                    log.info("  labels[0] (binary): {}", Long.toBinaryString(firstLabel));

                    // éªŒè¯è§£ç 
                    int level = (int)(firstLabel & 0xFF);
                    int count = (int)((firstLabel >> 8) & 0xFF);
                    log.info("  éªŒè¯è§£ç : è¯„çº§={}, è®°å½•æ•°={}", level, count);
                }

                verifyCount++;
            }
            log.info("================================");

            // 4. æ„å»ºè¯·æ±‚
            log.info("æ„å»ºgRPCè¯·æ±‚...");
            Psi.MatchRequest request = Psi.MatchRequest.newBuilder()
                    .setContextData(ByteString.copyFrom(contextBytes))
                    .setPayloadData(ByteString.copyFrom(payloadBytes))
                    .putAllSrvData(srvData)
                    .build();

            log.info("è¯·æ±‚å¤§å°: {} å­—èŠ‚", request.getSerializedSize());

            // ğŸ”¥ 5. æ‰“å°è¯·æ±‚ä¸­çš„srv_dataï¼ˆç¡®è®¤åºåˆ—åŒ–æ­£ç¡®ï¼‰
            log.info("========== è¯·æ±‚ä¸­çš„srv_dataéªŒè¯ ==========");
            Map<Long, Psi.LabelsType> requestSrvData = request.getSrvDataMap();
            log.info("request.srv_data.size: {}", requestSrvData.size());

            verifyCount = 0;
            for (Map.Entry<Long, Psi.LabelsType> entry : requestSrvData.entrySet()) {
                if (verifyCount >= 3) break;

                log.info("request.srv_data[{}]:", verifyCount);
                log.info("  key: {}", entry.getKey());
                log.info("  labels: {}", entry.getValue().getLabelsList());

                verifyCount++;
            }
            log.info("==========================================");

            log.info("è°ƒç”¨C++æœåŠ¡å™¨...");

            // 6. è°ƒç”¨gRPCï¼ˆè®¾ç½®3åˆ†é’Ÿè¶…æ—¶ï¼‰
            Psi.EncryptResponse response = blockingStub
                    .withDeadlineAfter(3, TimeUnit.MINUTES)
                    .doMatch(request);

            // 7. è¿”å›Base64ç¼–ç çš„ç»“æœ
            byte[] resultBytes = response.getPayloadData().toByteArray();
            String resultBase64 = Base64.getEncoder().encodeToString(resultBytes);

            log.info("gRPCè°ƒç”¨æˆåŠŸï¼");
            log.info("è¿”å›ç»“æœå­—èŠ‚æ•°: {}", resultBytes.length);
            log.info("========================================");

            return resultBase64;

        } catch (Exception e) {
            log.error("========================================");
            log.error("gRPCè°ƒç”¨å¤±è´¥: {}", e.getMessage());
            log.error("å¼‚å¸¸ç±»å‹: {}", e.getClass().getName());
            if (e.getCause() != null) {
                log.error("åŸå› : {}", e.getCause().getMessage());
            }
            log.error("========================================");
            log.error("è¯¦ç»†å †æ ˆ:", e);
            throw new RuntimeException("PSIåŒ¹é…å¤±è´¥: " + e.getMessage(), e);
        }
    }

    /**
     * å°†é»‘åå•å®Œæ•´ä¿¡æ¯è½¬æ¢ä¸ºsrv_dataæ ¼å¼ï¼ˆä½¿ç”¨ä½ç¼–ç ï¼‰
     *
     * Mapç»“æ„ï¼š
     * key = èº«ä»½è¯å·å“ˆå¸Œå€¼
     * value = LabelsType { labels: [ç¼–ç åçš„å®Œæ•´ä¿¡æ¯] }
     */
    /**
     * å°†é»‘åå•å®Œæ•´ä¿¡æ¯è½¬æ¢ä¸ºsrv_dataæ ¼å¼ï¼ˆå¤šlabelsæ–¹æ¡ˆï¼‰
     */
    private Map<Long, Psi.LabelsType> convertBlacklistToSrvData(List<BlacklistFullInfo> blacklistData) {
        Map<Long, Psi.LabelsType> srvData = new HashMap<>();

        log.info("---------- srv_data è½¬æ¢è¯¦æƒ… ----------");

        for (int i = 0; i < blacklistData.size(); i++) {
            BlacklistFullInfo info = blacklistData.get(i);

            // è®¡ç®—èº«ä»½è¯å“ˆå¸Œå€¼ä½œä¸ºkey
            long idCardHash = IdCardHashUtil.hashIdCard(info.getMain().getIdCard());

            // ç¼–ç ä¸ºlabelsæ•°ç»„
            long[] labels = BlacklistBitEncoder.encodeBlacklistInfoToLabels(info);

            // æ„å»ºLabelsType
            Psi.LabelsType.Builder labelsBuilder = Psi.LabelsType.newBuilder();
            for (long label : labels) {
                labelsBuilder.addLabels(label);
            }
            Psi.LabelsType labelsType = labelsBuilder.build();

            srvData.put(idCardHash, labelsType);

            // æ‰“å°å‰3æ¡çš„è¯¦ç»†ä¿¡æ¯
            if (i < 3) {
                log.info("  [{}] èº«ä»½è¯={}, hash={}",
                        i, info.getMain().getIdCard(), idCardHash);
                log.info("       labelsæ•°é‡: {}", labels.length);
                log.info("       labels[0]: {} (è¯„çº§={}, è®°å½•æ•°={})",
                        labels[0],
                        info.getMain().getRiskLevel().getDescription(),
                        info.getMain().getRecordCount());

                for (int j = 0; j < info.getRecords().size(); j++) {
                    var rec = info.getRecords().get(j);
                    log.info("       labels[{}]: {} ({}(code={}) + {}(code={}))",
                            j + 1,
                            labels[j + 1],
                            rec.getBehaviorType().getDescription(),
                            rec.getBehaviorType().getCode(),
                            rec.getTool().getDescription(),
                            rec.getTool().getCode());
                }
            }
        }

        log.info("--------------------------------------");
        log.info("srv_dataè½¬æ¢å®Œæˆï¼Œå…± {} æ¡", srvData.size());

        return srvData;
    }


}